[project]
name = "rtd-sim"
version = "0.1.0"
requires-python = ">=3.10"
description = "RTD_SIM Phase 1 core skeleton"
readme = "README.md"
authors = [{ name = "Theodore Lim" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["simulation*", "agent*", "ui*", "config*", "visualizer*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"